# aatbe-lang

./: .env  .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CREDITS.md  Cargo.toml  LICENSE  Makefile  README.md  Scratchbook.md  boot.S  kern.aat  libc.aat  lisp.aat  llvm.aat  llvm.lli  main.aat  main.aat.bak  prelude.aat  ptree.txt  return-test.aat  spector.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: rust.yml
aatboot/: Cargo.toml
aatboot/src/: main.rs
aatlib/: aatrt.aat  char.aat  libc.aat  prelude.aat  str.aat  string.aat
aatlib/fmt/: print.aat
aatlib/io/: fio.aat
aatlib/math/: funcs.aat  point.aat  vec3.aat
aatrt/: Cargo.toml
aatrt/src/: lib.rs
bench/: bubble.aat  fizzbuzz.aat  raytracer.aat
bench/raytracer/: ray.aat  scene.aat
comp-be/: Cargo.toml
comp-be/src/: fmt.rs  lib.rs
parser/: Cargo.toml
parser/src/: ast.rs  lexer.rs  lib.rs  tests.rs
spec/compiler/: 001_entry.aat  003_fndef.aat  004_fndef_call.aat  005_return_test.aat  006_var_delc.aat  007_var_assign.aat  008_identity_func.aat  009_if_conditions.aat  010_record_decl.aat  011_record_init.aat  012_record_read.aat  013_record_write.aat  014_new_semantics.aat  015_str_indexing.aat  016_function_overloading.aat  017_array_init.aat  018_array_index.aat  019_reference.aat  020_if_expression.aat  021_expected_expression.aat  022_pass_slice.aat  023_generic_type.aat  024_generic_function.aat  025_extern_opaque.aat  026_newtype.aat  arith.aat  return_test.aat
spec/runtime/: 001_exit.aat  (+1 more)
src/: main.rs
(+82 files in other folders)
