[package]
name = "aatboot"
version = "0.1.0"
authors = ["chronium", "SplittyDev"]
edition = "2018"
description = "Åtbe bootstrap compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comp-be = { path="../comp-be" }
parser = { path="../parser" }

clap = "^2.33.0"
simplelog = "^0.7.4"
log = "^0.4"
glob = "^0.3.0"
llvm-sys = "60.0"
dotenv = "^0.15.0"
llvm-sys-wrapper = { path = "../llvm-sys-wrapper" }
